Upgrade to RT4/Pazaz client