@@ -304,7 +304,7 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
                     break;
                 case R.id.camera:
                     if(!mouseState){ // Camera Mode On
-                        AWTInputBridge.sendKey((char)120,120);
+                        AWTInputBridge.sendKey((char)120,120); // Send F9
                         v.setBackground(getResources().getDrawable( R.drawable.control_button_pressed ));
                         mouseState = true;
                     }
@@ -368,15 +368,13 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
         conT = this;
         JREUtils.redirectAndPrintJRELog(this);
 
-        // Load saved username and password
-        SharedPreferences preferences = PreferenceManager.getDefaultSharedPreferences(this);
-        String name = preferences.getString("username","");
-        String pass = preferences.getString("password","");
-
         try {
             JREUtils.jreReleaseList = JREUtils.readJREReleaseProperties();
             
             List<String> javaArgList = new ArrayList<>();
+
+            // Load saved username and password
+            SharedPreferences preferences = PreferenceManager.getDefaultSharedPreferences(this);
 
             // Enable Caciocavallo
             Tools.getCacioJavaArgs(javaArgList,false);
@@ -384,23 +382,18 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
             if (javaArgs != null) {
                 javaArgList.addAll(Arrays.asList(javaArgs.split(" ")));
             } else {
+                javaArgList.add("-Dusername=" + preferences.getString("username",""));
+                javaArgList.add("-Dpassword=" + preferences.getString("password",""));
                 javaArgList.add("-jar");
                 javaArgList.add(miniclient.getAbsolutePath());
                 javaArgList.add(config.getAbsolutePath()); // Pass client config as arg0
-                javaArgList.add("username=miniclientparam:"+name);
-                javaArgList.add("password=miniclientparam:"+pass);
+                javaArgList.add(Tools.DIR_DATA + "/plugins/"); // Pass plugins directory as arg1
             }
 
             Logger.getInstance().appendToLog("Info: Java arguments: " + Arrays.toString(javaArgList.toArray(new String[0])));
             Log.i("Info: Java arguments: ",Arrays.toString(javaArgList.toArray(new String[0])));
             
             // Run java on sandbox, non-overrideable.
-            Collections.reverse(javaArgList);
-
-            javaArgList.add("-Xbootclasspath/a:" + Tools.DIR_DATA + "/pro-grade.jar");
-            javaArgList.add("-Djava.security.manager=net.sourceforge.prograde.sm.ProGradeJSM");
-            javaArgList.add("-Djava.security.policy=" + Tools.DIR_DATA + "/java_sandbox.policy");
-            Collections.reverse(javaArgList);
 
             JREUtils.launchJavaVM(this, javaArgList);
         } catch (Throwable th) {
